--- a/user/Makefile
+++ b/user/Makefile
@@ -1,17 +1,17 @@
 
 GOPATH:=$(shell go env GOPATH)
-MODIFY=Mgithub.com/micro/go-micro/api/proto/api.proto=github.com/micro/go-micro/v2/api/proto
+
 
 .PHONY: proto
 proto:
-    
-	protoc --proto_path=. --micro_out=${MODIFY}:. --go_out=${MODIFY}:. proto/user/user.proto
-    
+
+    cd proto/user && protoc --proto_path=.:$GOPATH/src --go_out=. --micro_out=. user.proto && cd -
+
 
 .PHONY: build
-build: proto
+build:
 
-	go build -o user-service *.go
+	CGO_ENABLED=0 GOOS=linux GOARCH=amd64  go build -o user-srv *.go
 
 .PHONY: test
 test:
@@ -19,4 +19,11 @@ test:
 
 .PHONY: docker
 docker:
-	docker build . -t user-service:latest
+	docker build . -t user-srv:v0.0.1
+
+
+.PHONY: run
+run:
+	go mod download
+	CONSUL_ADDRESS=127.0.0.1:8500 MICRO_REGISTRY=consul MICRO_REGISTRY_ADDRESS=127.0.0.1:8500 go run main.go
+
